NEXUS-46643 - feat: Zscaler POC (#13576)
Co-authored-by: markdodgson <mdodgson@sonatype.com>
Co-authored-by: Navyasanthi Nandivelugu <88302018+NavyasanthiNandivelugu@users.noreply.github.com>
Co-authored-by: Cindy Ke <cindyko226@gmail.com>